playing with flexboxes

--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Alex Clayton's Portfolio</title>
 </head>
-<body class="super-background">
-    <header class="super-header">
-        <h1>Alex Clayton</h1>
-        <img src="./assets/images/MyFace.png" alt="cropped picture of Alex Clayton's head">
-        <nav>
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact-me">Contact Me</a></li>
-                <li><a href="">Resume</a></li>
-            </ul>
-        </nav>
-
+<body class="super-background" alt="Webpage background displaying pink and blue dust splash">
+    <header>
+        <div id="name">
+            <h1>Alex Clayton</h1>
+        </div>
+        <div>
+            <img src="./assets/images/MyFace.png" alt="cropped image of Alex Clayton's head">
+        </div>
+        <div>
+            <nav id="nav">
+                <ul>
+                    <li><a href="#about-me">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact-me">Contact</a></li>
+                    <li><a href="">Resume</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section id="about-me" class="top">
@@ -31,19 +36,19 @@
         <section id="portfolio" class="middle">
                 <h2>Portfolio</h2>
                 <div class="portfolio-grid">
-                    <a href="https://alexclaytonbootcamp.github.io/Module-1-Challenge-Horiseon/" class="box1">
+                    <a href="https://alexclaytonbootcamp.github.io/Module-1-Challenge-Horiseon/" class="box1" alt="large box with an image of a sweet spacescape">
                         <h3>First Project</h3>
                     </a>
-                    <div class="box2">
+                    <div class="box2" alt="small box with an image of a dyson sphere">
                         <h3>placeholder</h3>
                     </div>
-                    <div class="box3">
+                    <div class="box3" alt="small box with an image of a sunflower field">
                         <h3>placeholder</h3>
                     </div>
-                    <div class="box4">
+                    <div class="box4" alt="small box with an image of a nebula">
                         <h3>placeholder</h3>
                     </div>
-                    <div class="box5">
+                    <div class="box5" alt="small box with an image of a mysterious underwater scene">
                         <h3>placeholder</h3>
                     </div>
                 </div>
