cleaned up some redundancies in the CSS stylesheet, updated README

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body class="super-background" alt="Webpage background displaying pink and blue dust splash">
     <header>
-        <div id="name">
+        <div class="name">
             <h1>Alex Clayton</h1>
         </div>
         <div>
             <img src="./assets/images/MyFace.png" alt="cropped image of Alex Clayton's head">
         </div>
-        <div id="nav">
-            <nav id="right">
+        <div class="nav">
+            <nav>
                 <ul>
                     <li><a href="#about-me">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -38,7 +38,7 @@
         <section id="portfolio" class="middle">
                 <h2>Portfolio</h2>
                 <div class="portfolio-grid">
-                    <a href="https://alexclaytonbootcamp.github.io/Module-1-Challenge-Horiseon/" class="box1" alt="large box with an image of a sweet spacescape">
+                    <a class="box1" href="https://alexclaytonbootcamp.github.io/Module-1-Challenge-Horiseon/" alt="large box with an image of a sweet spacescape">
                         <h3>First Project</h3>
                     </a>
                     <div class="box2" alt="small box with an image of a dyson sphere">
@@ -57,12 +57,12 @@
         </section>
         <section id="contact-me" class="bottom">
                 <h2>Contact Me</h2>
-                <div id="right">
+                <div>
                     <ul>
-                        <li><a href="tel:7855555555">785.555.5555</a></li>
-                        <li><a href="mailto:alexander.clayton.email@gmail.com">alexander.clayton.email@gmail.com</a></li>
-                        <li><a href="https://github.com/alexclaytonbootcamp">GitHub</a></li>
                         <li><a href="https://twitter.com/home">Twitter</a></li>
+                        <li><a href="https://github.com/alexclaytonbootcamp">GitHub</a></li>
+                        <li><a href="mailto:alexander.clayton.email@gmail.com">alexander.clayton.email@gmail.com</a></li>
+                        <li><a href="tel:7855555555">785.555.5555</a></li>
                     </ul>
                 </div>
         </section>
@@ -70,7 +70,7 @@
 
     </main>
     <footer>
-
+        <p>Project created September 2022 by Alex Clayton</p>
     </footer>
     
 </body>
