fixed some grammar in the About Me section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id="about-me" class="top">
                 <h2>About me</h2>
-                <p>Hello World, welcome to my portfolio!  My name is Alex Clayton.  I'm a Kansan born-and-raised and can't think of a place I'd be in this world.  I'm fairly new to coding, but I'm learning fast and looking forward to improving my skills each and every day.  I'm currently attending the KU Coding Bootcamp where I've learned the basics including how to make this webpage!
+                <p>Hello World, welcome to my portfolio!  My name is Alex Clayton.  I'm a Kansan born-and-raised and can't think of a place I'd rather be in this world.  I'm fairly new to coding, but I'm learning fast and looking forward to improving my skills each and every day.  I'm currently attending the KU Coding Bootcamp where I've learned the basics including how to make this webpage!
 
                 I'm currently living in Overland Park with my best friend and 2 cats, Cleopatra and Achilles.  In my spare time I like to play video games (primarily Apex Legends), spend time outdoors playing soccer and cruising on a skateboard, and of course CODING! I spent the last 12 years in the hospitality industry working every job in a hotel from breakfast attendant to general manager. It was hard to say goodbye to that chapter in my life, but I was fortunate to learn a lot not just about the world but also myself, and make some lifelong friends along the way.  Now I've shifted my focus to a future in programming and I'm excited to see what new adventures this will bring 😁
                 </p>
