added group project #1 to portfolio

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
                 <h2>Portfolio</h2>
                 <div class="portfolio-grid">
                     <a class="box1" href="https://alexclaytonbootcamp.github.io/Module-1-Challenge-Horiseon/" alt="large box with an image of a sweet spacescape">
-                        <h3>First Project</h3>
+                        <h3>First Project: Horiseon Webpagecd
+                        </h3>
                     </a>
-                    <div class="box2" alt="small box with an image of a dyson sphere">
-                        <h3>placeholder</h3>
-                    </div>
+                    <a class="box2" href="https://cecurtiss.github.io/parks-and-weather-app/index.html" alt="small box with an image of a dyson sphere">
+                        <h3>Group Project #1:  NPS Trip Planner</h3>
+                    </a>
                     <div class="box3" alt="small box with an image of a sunflower field">
                         <h3>placeholder</h3>
                     </div>
