--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                         <h3>First Project: Horiseon Webpagecd
                         </h3>
                     </a>
-                    <a class="box2" href="https://cecurtiss.github.io/parks-and-weather-app/index.html" alt="small box with an image of a dyson sphere">
+                    <a class="box2" href="https://cecurtiss.github.io/parks-and-weather-app/index.html" alt="beautiful national park scene">
                         <h3>Group Project #1:  NPS Trip Planner</h3>
                     </a>
-                    <div class="box3" alt="small box with an image of a sunflower field">
-                        <h3>placeholder</h3>
+                    <div class="box3" href="https://alexclaytonbootcamp.github.io/kanye.rest/" alt="powerful kanye west image">
+                        <h3>kanye.rest</h3>
                     </div>
                     <div class="box4" alt="small box with an image of a nebula">
                         <h3>placeholder</h3>
