fixed kanye.rest link

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
                     <a class="box2" href="https://cecurtiss.github.io/parks-and-weather-app/index.html" alt="beautiful national park scene">
                         <h3>Group Project #1:  NPS Trip Planner</h3>
                     </a>
-                    <div class="box3" href="https://alexclaytonbootcamp.github.io/kanye.rest/" alt="powerful kanye west image">
+                    <a class="box3" href="https://alexclaytonbootcamp.github.io/kanye.rest/" alt="powerful kanye west image">
                         <h3>kanye.rest</h3>
-                    </div>
+                    </a>
+                    <!-- change <div> to <a> when adding projects -->
                     <div class="box4" alt="small box with an image of a nebula">
                         <h3>placeholder</h3>
                     </div>
