added hello from the world, updated grid styling

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                         <h3>kanye.rest</h3>
                     </a>
                     <!-- change <div> to <a> when adding projects -->
-                    <div class="box4" alt="small box with an image of a nebula">
-                        <h3>placeholder</h3>
-                    </div>
+                    <a class="box4" href="https://alexclaytonbootcamp.github.io/Hello-From-the-World/" alt="small box with an image of a nebula">
+                        <h3>Hello from the World</h3>
+                    </a>
                     <div class="box5" alt="small box with an image of a mysterious underwater scene">
                         <h3>placeholder</h3>
                     </div>
