--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <a class="box4" href="https://alexclaytonbootcamp.github.io/Hello-From-the-World/" alt="small box with an image of a nebula">
                         <h3>Hello from the World</h3>
                     </a>
-                    <div class="box5" href="https://gitlit-group-5.herokuapp.com/" alt="heroku challenge">
+                    <a class="box5" href="https://gitlit-group-5.herokuapp.com/" alt="heroku challenge">
                         <h3>TV Show Message Board</h3>
-                    </div>
+                    </a>
                 </div>
         </section>
         <section id="contact-me" class="bottom">
